Fix up singlestat spacing

--- a/cronenberg/static/cronenberg.css
+++ b/cronenberg/static/cronenberg.css
@@ -77,7 +77,7 @@ h1.page-title {
     font-size: 1.2em;
     font-weight: normal;
     text-transform:uppercase;
-    padding-bottom: 12px;
+    margin: 0px;
 }
 
 .well .singlestat h3 {
@@ -86,11 +86,13 @@ h1.page-title {
 .singlestat p {
     font-size: 3em;
     font-weight: bold;
+    margin-bottom: 0px;
 }
 
 .singlestat .unit {
     font-size: .5em;
     text-transform: lowercase;
+    margin-left: 0px;
 }
 
 .jumbotron-singlestat div {
